@@ -128,6 +128,7 @@ enum option_keys_enum
   UI_KEY_FITESTIMATEHDU,
   UI_KEY_FITESTIMATECOL,
   UI_KEY_FITROBUST,
+  UI_KEY_CONCENTRATION,
 };
 
 
